Fix auto complete fields visibility

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,14 +28,6 @@ body {
   background-color: $fy-nav-hover;
 }
 
-.mat-select-panel mat-option.mat-option {
-  height: unset;
-}
-
-.mat-option-text.mat-option-text {
-  white-space: normal;
-}
-
 // This is a fix for select panels becoming transparent under certain cases
 .mat-select-panel:not([class*=mat-elevation-z]) {
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2), 0 4px 5px 0 rgba(0,0,0,.14), 0 1px 10px 0 rgba(0,0,0,.12);
